<resources>
    <string name="app_name">ProductApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="to_fav"> Favorilerden </string>
    <string name="removed_fav"> Favorilerden Kaldırıldı </string>
    <string name="error">Bir Hata İle Karşılaşıldı : </string>
    <string name="added"> Favorilere Eklendi</string>
    <string name="deleted"> Favorilerden Silindi</string>
    <string name="order">Order</string>
    <string name="fav">Fav</string>
    <string name="descrease">-</string>
    <string name="increase">+</string>
    <string name="more_information">Daha Fazla Bilgi İçin Modelin Adına Tıklayınız</string>
    <string name="background">background</string>
    <string name="imagebutton">imagebutton</string>
    <string name="price">Price</string>
    <string name="imageview">imageview</string>
    <string name="add_to_card">Add To Card</string>
    <string name="remove_to_card">Remove To Card</string>
    <string name="basket">BASKET</string>
    <string name="added_basket"> Sepete Eklendi</string>
    <string name="deleted_basket"> Sepetten Silindi</string>
    <string name="empty_basket">Sepete Bir Şey Ekleyiniz</string>
    <string name="completed_order">Siparişiniz Alınmıştır</string>
    <string name="ok">Tamam</string>
    <string name="total">Total:</string>
    <string name="count">Count</string>
    <string name="checkout">Checkout</string>
    <string name="pay">Pay</string>
    <string name="search">Search</string>
    <string name="filtreleme">Filtreleme</string>
    <string name="min_price">En Az Fiyat</string>
    <string name="max_price">En Çok Fiyat</string>
    <string name="apply">Uygula</string>
    <string name="cancel">İptal</string>
    <string name="clear">Temizle</string>
    <string name="favoriler">Favoriler</string>
</resources>