<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.ProductsFragment">


    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tbProducts"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/bg_color"
        android:minHeight="?attr/actionBarSize"
        android:theme="?attr/actionBarTheme"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imgBasket"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="20dp"
            android:contentDescription="@null"
            android:src="@drawable/ic_shopping" />

        <TextView
            android:id="@+id/toolbarTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:fontFamily="@font/pacifico"
            android:text="@string/app_name"
            android:textColor="@color/black"
            android:textSize="26sp"
            tools:layout_editor_absoluteX="174dp"
            tools:layout_editor_absoluteY="11dp" />
    </androidx.appcompat.widget.Toolbar>

    <EditText
        android:id="@+id/search_bar"
        android:layout_width="0dp"
        android:layout_height="50sp"
        android:layout_margin="8dp"
        android:autofillHints="Search"
        android:drawableStart="@drawable/ic_search"
        android:hint="@string/search"
        android:inputType="text"
        android:padding="8dp"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/btnFilter"
        app:layout_constraintEnd_toStartOf="@+id/btnCategory"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbProducts" />

    <ImageButton
        android:id="@+id/btnFilter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/filtreleme"
        android:padding="8dp"
        android:src="@drawable/ic_filter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tbProducts" />

    <ImageButton
        android:id="@+id/btnCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:background="?android:attr/selectableItemBackgroundBorderless"
        android:contentDescription="@string/filtreleme"
        android:padding="8dp"
        android:src="@drawable/ic_category"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/btnFilter"
        app:layout_constraintTop_toBottomOf="@+id/tbProducts" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvProducts"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/search_bar"
        tools:listitem="@layout/item_products" />

    <TextView
        android:id="@+id/badge_basket_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/floatingOrderButton"
        app:layout_constraintEnd_toEndOf="@id/floatingOrderButton"
        app:layout_constraintTop_toTopOf="@id/floatingOrderButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingOrderButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="8dp"
        android:clickable="true"
        android:contentDescription="@string/order"
        android:focusable="true"
        android:src="@drawable/ic_basket"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@null" />

    <TextView
        android:id="@+id/badge_fav_number"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:foregroundGravity="top"
        android:padding="2dp"
        android:textColor="@color/white"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/floatingActionButton"
        app:layout_constraintEnd_toEndOf="@id/floatingActionButton"
        app:layout_constraintTop_toTopOf="@id/floatingActionButton" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:clickable="true"
        android:contentDescription="@string/fav"
        android:focusable="true"
        android:src="@drawable/ic_favorite"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@null" />


</androidx.constraintlayout.widget.ConstraintLayout>